feat: add service_port param for connector
